--- a/Project.toml
+++ b/Project.toml
@@ -3,10 +3,8 @@ uuid = "c665332c-d47e-4eca-be35-4e358dd2b01a"
 authors = ["David MacMahon <davidm@astro.berkeley.edu>"]
 version = "0.0.0"
 
-[deps]
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+[weakdeps]
 Pcap = "25147f4a-163d-46f2-b0d5-7291076f4cc2"
-StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 
 [extensions]
 PcapCODIFExt = "Pcap"
@@ -16,7 +14,6 @@ Pcap = {url = "https://github.com/JuliaIO/Pcap.jl.git"}
 
 [compat]
 Pcap = "0.0.5"
-StructArrays = "0.6.18"
 
 [extras]
 Pcap = "25147f4a-163d-46f2-b0d5-7291076f4cc2"
